--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,14 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <li><a href="/pages/home">Menu</a></li>
+            <% if current_user.role =='admin' %>
+              <li><a href="/admin">Administration</a></li>
+            <% end %>
+            <% if current_page?('/pages/home') %>
+              <li><a href="/pages/home">Menu</a></li>
+            <% end %>
             <li><a href="#">Créer un Projet</a></li>
             <li><a href="#">Maison Type</a></li>
-            <li><a href="#">Inscription</a></li>
           <% end %>
         </ul>
       </div>
