Gestion des Projets : 	- Gestion des suppressions OK
Gestion des fournisseurs :
	- Création du controller
	- Création des views
	- Ajout et modification OK, Delete non tester

Base de données :
	-Ajout des champs(numéro et email) dans la table client
	-Ajout des champs(numero de rue, nom de la rue,codepostal, numéro et email

Modification application.html.erb
	- Ajout css message de connexion et déconnexion
	- Ajout css pour les messages flash

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 <% else %>
 
     <a href=" <%= clients_path %>" class="btn btn-primary">Les clients</a>
-    
     <a href=" <%= project_modular_houses_path %>" class="btn btn-primary">Les projets</a>
+    <a href=" <%= providers_path %>" class="btn btn-primary">Les fournisseurs</a>
 
 <% end %>
