--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -2,32 +2,42 @@
 
 <%= form_for @client do |f| %>
 <div class="form-group">
-    <%= f.label :firstNameClient %><br />
+    <%= f.label :firstNameClient, 'Prénom :' %><br />
     <%= f.text_field :firstNameClient, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-    <%= f.label :clientName %><br />
+    <%= f.label :clientName, 'Nom :' %><br />
     <%= f.text_field :clientName, class: 'form-control'%>
 </div>
 
 <div class="form-group">
-    <%= f.label :streetNumber %><br />
+    <%= f.label :phonenumber, 'Téléphone :' %><br />
+    <%= f.text_field :phonenumber, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+    <%= f.label :email, 'Email :' %><br />
+    <%= f.text_field :email, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+    <%= f.label :streetNumber, 'Numéro de rue :' %><br />
     <%= f.text_field :streetNumber, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-    <%= f.label :streetNam %><br />
+    <%= f.label :streetName, 'Nom de la rue :' %><br />
     <%= f.text_field :streetName, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-    <%= f.label :pc %><br />
+    <%= f.label :pc, 'Code postal : ' %><br />
     <%= f.text_field :pc, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-    <%= f.label :cityName %><br />
+    <%= f.label :cityName, 'Ville :'%><br />
     <%= f.text_field :cityName, class: 'form-control' %>
 </div>
 
