--- a/app/views/project_modular_houses/edit.html.erb
+++ b/app/views/project_modular_houses/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Projets#edit</h1>
-<p>Find me in app/views/projets/edit.html.erb</p>
+<h1>Modifier projet</h1>
+
+<%= form_for @projet do |f| %>
+<div class="form-group">
+    <%= f.label :projectName, 'Nom du projet :' %><br />
+    <%= f.text_field :projectName, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+    <%= f.label :client_id, 'Client :'%><br />
+    <%= f.collection_select :client_id, Client.all, :id, :clientName%>
+</div>
+
+<div class="form-group">
+    <button class="btn btn-primary", type="submit">Modifier le projet</button>
+</div>
+
+<% end %>
