--- a/app/views/providers/new.html.erb
+++ b/app/views/providers/new.html.erb
@@ -1,14 +1,9 @@
-<h1>Créer client</h1>
+<h1>Créer fournisseur</h1>
 
-<%= form_for @client do |f| %>
+<%= form_for @provider do |f| %>
 <div class="form-group">
-    <%= f.label :firstNameClient, 'Prénom :' %><br />
-    <%= f.text_field :firstNameClient, class: 'form-control' %>
-</div>
-
-<div class="form-group">
-    <%= f.label :clientName, 'Nom :' %><br />
-    <%= f.text_field :clientName, class: 'form-control'%>
+    <%= f.label :providerName, 'Nom du fournisseur :' %><br />
+    <%= f.text_field :providerName, class: 'form-control' %>
 </div>
 
 <div class="form-group">
@@ -42,7 +37,7 @@
 </div>
 
 <div class="form-group">
-    <button class="btn btn-primary", type="submit">Créer le client</button>
+    <button class="btn btn-primary", type="submit">Créer le fournisseur</button>
 </div>
 
 <% end %>
