--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,10 @@
 				<a href=" <%= providers_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
 				<span class="title">Fournisseurs</span> 
             </li>
+            <li>
+				<a href=" <%= components_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
+				<span class="title">Composants</span> 
+            </li>
 		</ul>
 	</div>
 <% end %>
