--- a/app/views/project_modular_houses/index.html.erb
+++ b/app/views/project_modular_houses/index.html.erb
@@ -15,8 +15,8 @@
         <tr>
             <td><%= projet.id %></td>
             <td><%= projet.projectName %></td>
-            <td><a href="<%= client_path(projet.client_id) %>"><%= projet.client_id %></a></td>
-            <td><%= projet.user_id %></td>
+            <td><a href="<%= client_path(projet.client_id) %>"><%= projet.client.id %></a></td>
+            <td><%= projet.user.id %></td>
             <td>
                 <a href="<%= edit_project_modular_house_path(projet.id) %>" class="btn btn-primary">Editer</a>
                 <a href="<%= project_modular_house_path(projet.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
