--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,6 +21,10 @@
 				<a href=" <%= components_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
 				<span class="title">Composants</span> 
             </li>
+            <li>
+				<a href=" <%= family_components_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
+				<span class="title">Famille Composant</span> 
+            </li>
 		</ul>
 	</div>
 <% end %>
