--- a/app/views/project_modular_houses/index.html.erb
+++ b/app/views/project_modular_houses/index.html.erb
@@ -7,6 +7,7 @@
             <td>Nom du projet</td>
             <td>ID du client</td>
             <td>ID du commercial</td>
+            <td>ID de la gamme</td>
             <td>Action</td>
         </tr>
     </thead>
@@ -17,6 +18,7 @@
             <td><%= projet.projectName %></td>
             <td><a href="<%= client_path(projet.client_id) %>"><%= projet.client.id %></a></td>
             <td><%= projet.user.id %></td>
+            <td><%= projet.scale_modular_house_id %></td>
             <td>
                 <a href="<%= edit_project_modular_house_path(projet.id) %>" class="btn btn-primary">Editer</a>
                 <a href="<%= project_modular_house_path(projet.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
