--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -14,6 +14,7 @@
             <td><%= provider.id %></td>
             <td><%= provider.providerName %></td>
             <td>
+                <a href="<%= providers_path(provider.id) %>" class="btn btn-info">Détails</a>
                 <a href="<%= edit_provider_path(provider.id) %>" class="btn btn-primary">Editer</a>
                 <a href="<%= provider_path(provider.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
             
