Modification CSS (show,, edit,, delete)
Ajout des droits can. En attante avant utilisation.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
 
 .footer {position: absolute; bottom: 0; left: 0; right: 0; margin-bottom: 0; padding-bottom: 0;}
