--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Les clients</h1>
+<h1>Liste des clients</h1>
 
 <table class="table">
     <thead>
@@ -16,9 +16,9 @@
             <td><%= client.firstNameClient %></td>
             <td><%= client.clientName %></td>
             <td>
-                <a href="<%= clients_path(client.id) %>" class="btn btn-info">Détails</a>
-                <a href="<%= edit_client_path(client.id) %>" class="btn btn-primary">Editer</a>
-                <a href="<%= client_path(client.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
+                <a href="<%= clients_path(client.id) %>" class="fa fa-eye fa-2x"></a>
+                <a href="<%= edit_client_path(client.id) %>" class="fa fa-pencil fa-2x"></a>
+                <a href="<%= client_path(client.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
             
             </td>
             
@@ -28,6 +28,6 @@
 </table>
 
 <p>
-    <a href="<%= new_client_path %>" class="btn btn-success">Nouveau client</a>
+    <a href="<%= new_client_path %>" class="btn btn-success fa fa-plus-circle"> Ajouter un nouveau client</a>
 </p>
 
