--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Les composants</h1>
+<h1>Liste des composants</h1>
 
 <table class="table">
     <thead>
@@ -20,9 +20,9 @@
             <td><%= component.family_component.familyComponentName %></td>
             <td><%= component.provider.providerName %></td>
             <td>
-                <a href="<%= component_path(component.id) %>" class="btn btn-info">Détails</a>
-                <a href="<%= edit_component_path(component.id) %>" class="btn btn-primary">Editer</a>
-                <a href="<%= component_path(component.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
+                <a href="<%= component_path(component.id) %>" class="fa fa-eye fa-2x"></a>
+                <a href="<%= edit_component_path(component.id) %>" class="fa fa-pencil fa-2x"></a>
+                <a href="<%= component_path(component.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
             </td>
         </tr>
         <% end %>
@@ -30,6 +30,6 @@
 </table>
 
 <p>
-    <a href="<%= new_component_path %>" class="btn btn-success">Nouveau Composant</a>
+    <a href="<%= new_component_path %>" class="btn btn-success fa fa-plus-circle"> Ajouter un nouveau composant</a>
 </p>
 
