--- a/app/views/project_modular_houses/index.html.erb
+++ b/app/views/project_modular_houses/index.html.erb
@@ -20,8 +20,8 @@
             <td><%= projet.user.lastname %></td>
             <td><%= projet.scale_modular_house.scaleName %></td>
             <td>
-                <a href="<%= edit_project_modular_house_path(projet.id) %>" class="btn btn-primary">Editer</a>
-                <a href="<%= project_modular_house_path(projet.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
+                <a href="<%= edit_project_modular_house_path(projet.id) %>" class="fa fa-pencil fa-2x"></a>
+                <a href="<%= project_modular_house_path(projet.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr de vouloir supprimer ce projet ?" data-method="delete"></a>
             </td>
         </tr>
         <% end %>
@@ -29,6 +29,6 @@
 </table>
 
 <p>
-    <a href="<%= new_project_modular_house_path %>" class="btn btn-success">Nouveau projet</a>
+    <a href="<%= new_project_modular_house_path %>" class="btn btn-success fa fa-plus-circle"> Ajouter un nouveau projet</a>
 </p>
 
