--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -14,9 +14,9 @@
             <td><%= provider.id %></td>
             <td><%= provider.providerName %></td>
             <td>
-                <a href="<%= providers_path(provider.id) %>" class="btn btn-info">Détails</a>
-                <a href="<%= edit_provider_path(provider.id) %>" class="btn btn-primary">Editer</a>
-                <a href="<%= provider_path(provider.id) %>" class="btn btn-danger" data-confirm="Etes sur sûr ?" data-method="delete">Supprimer</a>
+                <a href="<%= providers_path(provider.id) %>" class="fa fa-eye fa-2x"></a>
+                <a href="<%= edit_provider_path(provider.id) %>" class="fa fa-pencil fa-2x"></a>
+                <a href="<%= provider_path(provider.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
             
             </td>
             
@@ -26,6 +26,6 @@
 </table>
 
 <p>
-    <a href="<%= new_provider_path %>" class="btn btn-success">Nouveau fournisseur</a>
+    <a href="<%= new_provider_path %>" class="btn btn-success fa fa-plus-circle"> Ajouter un nouveau fournisseur</a>
 </p>
 
