--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,42 +2,33 @@
   <head>
     <title><%= yield(:title) %></title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track'=> 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
   </head>
   
   <body>
-    <nav class="navbar navbar-light bg-faded rounded navbar-toggleable-md">
-      <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-         <div class="col-md-8"><%= image_tag("logo.jpg", :alt => "logo madera", height:"60px") %></div>
-      </div>
-    
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
+      <div class="app-bar green">
+        <a class="app-bar-element" href="..."><%= image_tag("logo.jpg", :alt => "logo madera", height:"60px", width: "150px") %></a>
+        <span class="app-bar-divider"></span>
+
+        <ul class="app-bar-menu place-right">
           <% if user_signed_in? %>
-            <% if current_user.role =='admin' %>
-              <li><a href="/admin">Administration</a></li>
-            <% end %>
-            <% if !current_page?(authenticated_root_path) %>
-              <li><a href="<%= authenticated_root_path %> ">Menu</a></li>
-            <% end %>
-            <li><a href="<%= project_modular_houses_path %>">Créer un Projet</a></li>
-            <% if user_signed_in? %>
-              <li><%= link_to 'Se déconnecter', destroy_user_session_path, method: :delete %></li>
-            <% end %>
+              <% if current_user.role =='admin' %>
+                  <li><a href="/admin">Administration</a></li>
+              <% end %>
+              <% if !current_page?(authenticated_root_path) %>
+                  <li><a href="<%= authenticated_root_path %> ">Menu</a></li>
+              <% end %>
+              <% if user_signed_in? %>
+                  <li><%= current_user.firstname %></li>
+                  <li><%= link_to 'Se déconnecter', destroy_user_session_path, method: :delete %></li>
+              <% end %>
           <% end %>
         </ul>
       </div>
-      </div>
-  </nav>
   
   <section>
     <%= yield %>
