Modification CSS accueil : 	- Ajout dossier font(images, etc etc) dans Public a revoir 	- Modification home --> A revoir la deconnexion
	- Meteo OK

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,139 +1,292 @@
-<% if current_user.role == 'admin' %>
+<!DOCTYPE html>
+	<titre><% provide(:title, 'Menu') %></titre>
+	<head lang="en">
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<% else %>
-<!--
-<div class="container">
-   <div class="row">
-		<div class="col-md-4">
-			<div class="yolo">
-				<a href=" <%= project_modular_houses_path %>"><img src="http://s8.postimg.org/chqdmmoo5/all_posts.png"></a>
-				<span class="title">Projets</span>
-			</div>
+		<script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+
+		<style>
+			.tile-area-controls {
+				position: fixed;
+				right: 40px;
+				top: 40px;
+			}
+
+			.tile-group {
+				left: 100px;
+			}
+
+			.tile, .tile-small, .tile-sqaure, .tile-wide, .tile-large, .tile-big, .tile-super {
+				opacity: 0;
+				-webkit-transform: scale(.8);
+				transform: scale(.8);
+			}
+
+			#charmSettings .button {
+				margin: 5px;
+			}
+
+			.schemeButtons {
+				/*width: 300px;*/
+			}
+
+			@media screen and (max-width: 640px) {
+				.tile-area {
+					overflow-y: scroll;
+				}
+				.tile-area-controls {
+					display: none;
+				}
+			}
+
+			@media screen and (max-width: 320px) {
+				.tile-area {
+					overflow-y: scroll;
+				}
+
+				.tile-area-controls {
+					display: none;
+				}
+
+			}
+		</style>
+		<script>
+				(function($) {
+						$.StartScreen = function(){
+								var plugin = this;
+								var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
+
+								plugin.init = function(){
+										setTilesAreaSize();
+										if (width > 640) addMouseWheel();
+								};
+
+								var setTilesAreaSize = function(){
+										var groups = $(".tile-group");
+										var tileAreaWidth = 80;
+										$.each(groups, function(i, t){
+												if (width <= 640) {
+														tileAreaWidth = width;
+												} else {
+														tileAreaWidth += $(t).outerWidth() + 80;
+												}
+										});
+										$(".tile-area").css({
+												width: tileAreaWidth
+										});
+								};
+
+								var addMouseWheel = function (){
+										$("body").mousewheel(function(event, delta, deltaX, deltaY){
+												var page = $(document);
+												var scroll_value = delta * 50;
+												page.scrollLeft(page.scrollLeft() - scroll_value);
+												return false;
+										});
+								};
+
+								plugin.init();
+						}
+				})(jQuery);
+
+				$(function(){
+						$.StartScreen();
+
+						var tiles = $(".tile, .tile-small, .tile-sqaure, .tile-wide, .tile-large, .tile-big, .tile-super");
+
+						$.each(tiles, function(){
+								var tile = $(this);
+								setTimeout(function(){
+										tile.css({
+												opacity: 1,
+												"-webkit-transform": "scale(1)",
+												"transform": "scale(1)",
+												"-webkit-transition": ".3s",
+												"transition": ".3s"
+										});
+								}, Math.floor(Math.random()*500));
+						});
+
+						$(".tile-group").animate({
+								left: 0
+						});
+				});
+
+				function showCharms(id){
+						var  charm = $(id).data("charm");
+						if (charm.element.data("opened") === true) {
+								charm.close();
+						} else {
+								charm.open();
+						}
+				}
+
+				function setSearchPlace(el){
+						var a = $(el);
+						var text = a.text();
+						var toggle = a.parents('label').children('.dropdown-toggle');
+
+						toggle.text(text);
+				}
+
+				$(function(){
+						var current_tile_area_scheme = localStorage.getItem('tile-area-scheme') || "tile-area-scheme-dark";
+						$(".tile-area").removeClass (function (index, css) {
+								return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
+						}).addClass(current_tile_area_scheme);
+
+						$(".schemeButtons .button").hover(
+								function(){
+										var b = $(this);
+										var scheme = "tile-area-scheme-" +  b.data('scheme');
+										$(".tile-area").removeClass (function (index, css) {
+												return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
+										}).addClass(scheme);
+								},
+								function(){
+										$(".tile-area").removeClass (function (index, css) {
+												return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
+										}).addClass(current_tile_area_scheme);
+								}
+						);
+
+						$(".schemeButtons .button").on("click", function(){
+								var b = $(this);
+								var scheme = "tile-area-scheme-" +  b.data('scheme');
+
+								$(".tile-area").removeClass (function (index, css) {
+										return (css.match (/(^|\s)tile-area-scheme-\S+/g) || []).join(' ');
+								}).addClass(scheme);
+
+								current_tile_area_scheme = scheme;
+								localStorage.setItem('tile-area-scheme', scheme);
+
+								showSettings();
+						});
+				});
+
+				var weather_icons = {
+						'clear-day': 'mif-sun',
+						'clear-night': 'mif-moon2',
+						'rain': 'mif-rainy',
+						'snow': 'mif-snowy3',
+						'sleet': 'mif-weather4',
+						'wind': 'mif-wind',
+						'fog': 'mif-cloudy2',
+						'cloudy': 'mif-cloudy',
+						'partly-cloudy-day': 'mif-cloudy3',
+						'partly-cloudy-night': 'mif-cloud5'
+				};
+
+				var api_key = '909d14af918a94e166edfed227da1416';
+
+				$(function(){
+						if (navigator.geolocation) {
+								navigator.geolocation.getCurrentPosition(function(position){
+										var lat = position.coords.latitude, lon = position.coords.longitude;
+										var pos = lat+','+lon;
+										var latlng = new google.maps.LatLng(lat, lon);
+										var geocoder = new google.maps.Geocoder();
+										$.ajax({
+												url: 'https://api.darksky.net/forecast/909d14af918a94e166edfed227da1416/'+ pos,
+												dataType: 'jsonp',
+												success: function(data){
+														//do whatever you want with the data here
+														geocoder.geocode({latLng: latlng}, function(result, status){
+																console.log(result[3]);
+																$("#city_name").html(result[1].formatted_address);
+														});
+														var current = data.currently;
+														$("#city_temp").html(Math.round((current.temperature - 32) * 5/9)+" &deg;C");
+														$("#city_weather").html(current.summary);
+														$("#weather_icon").addClass(weather_icons[current.icon]);
+														$("#pressure").html(current.pressure);
+														$("#wind_speed").html(current.windSpeed);
+														$("#weather_bg").css({
+																'background-image': 'url(../images/'+current.icon+'.jpg'+')'
+														});
+												}
+										});
+								});
+						}
+				});
+		</script>
+
+	</head>
+
+	<div data-role="charm" id="charmSettings" data-position="top">
+		<h1 class="text-light">Réglages</h1>
+		<hr class="thin"/>
+		<br />
+		<div class="schemeButtons">
+			<div class="button square-button tile-area-scheme-dark" data-scheme="dark"></div>
+			<div class="button square-button tile-area-scheme-darkBrown" data-scheme="darkBrown"></div>
+			<div class="button square-button tile-area-scheme-darkCrimson" data-scheme="darkCrimson"></div>
+			<div class="button square-button tile-area-scheme-darkViolet" data-scheme="darkViolet"></div>
+			<div class="button square-button tile-area-scheme-darkMagenta" data-scheme="darkMagenta"></div>
+			<div class="button square-button tile-area-scheme-darkCyan" data-scheme="darkCyan"></div>
+			<div class="button square-button tile-area-scheme-darkCobalt" data-scheme="darkCobalt"></div>
+			<div class="button square-button tile-area-scheme-darkTeal" data-scheme="darkTeal"></div>
+			<div class="button square-button tile-area-scheme-darkEmerald" data-scheme="darkEmerald"></div>
+			<div class="button square-button tile-area-scheme-darkGreen" data-scheme="darkGreen"></div>
+			<div class="button square-button tile-area-scheme-darkOrange" data-scheme="darkOrange"></div>
+			<div class="button square-button tile-area-scheme-darkRed" data-scheme="darkRed"></div>
+			<div class="button square-button tile-area-scheme-darkPink" data-scheme="darkPink"></div>
+			<div class="button square-button tile-area-scheme-darkIndigo" data-scheme="darkIndigo"></div>
+			<div class="button square-button tile-area-scheme-darkBlue" data-scheme="darkBlue"></div>
+			<div class="button square-button tile-area-scheme-lightBlue" data-scheme="lightBlue"></div>
+			<div class="button square-button tile-area-scheme-lightTeal" data-scheme="lightTeal"></div>
+			<div class="button square-button tile-area-scheme-lightOlive" data-scheme="lightOlive"></div>
+			<div class="button square-button tile-area-scheme-lightOrange" data-scheme="lightOrange"></div>
+			<div class="button square-button tile-area-scheme-lightPink" data-scheme="lightPink"></div>
+			<div class="button square-button tile-area-scheme-grayed" data-scheme="grayed"></div>
 		</div>
-		<div class="col-md-4">
-			<div class="yolo">
-				<a href=" <%= clients_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
-				<span class="title">Clients</span> 
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="yolo">
-				<a href=" <%= providers_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
-				<span class="title">Fournisseurs</span>
-			</div>
-        </div>
-    </div>
-    <div class="row">       
-        <div class="col-md-4">
-        	<div class="yolo">
-				<a href=" <%= components_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
-				<span class="title">Composants</span> 
-			</div>
-        </div>
-        <div class="col-md-4">
-        	<div class="yolo">
-				<a href=" <%= family_components_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
-				<span class="title">Famille Composant</span> 
-			</div>
-        </div>
-        <div class="col-md-4">
-        	<div class="yolo">
-				<a href=" <%= scale_modular_houses_path %>"><img src="http://s28.postimg.org/ma9mhuywt/new_post.png"></a>
-				<span class="title">Gamme</span> 
-			</div>
-        </div>
 	</div>
-	 		
-	 -->	
-            
-            <div class="tile-group double">
-               	<div class="tile-container">
-               		
-               		<h1>Menu Principal</h1>
-               		
-                    <div class="tile fg-black">
-                    	<div class="tile-content slide-up">
-        					<div class="slide">
-        						<div class="image-containeer image-format-fill" style="width; 100%; height: 100%">
-        							<div class="frame">
-        								<%= image_tag("edit_home.png", :alt => "edit") %>
-        							</div>
-        						</div>
-        					</div>
-        					<div class="slide-over bg-white padding10">
-            					Nouveau devis
-        					</div>
-   						 </div>
-                    </div>
-                    
-                    <div class="tile fg-black">
-                    	<div class="tile-content slide-up">
-        					<div class="slide">
-        						<div class="image-containeer image-format-fill" style="width; 100%; height: 100%">
-        							<div class="frame">
-        								<%= image_tag("devis.png", :alt => "devis") %>
-        							</div>
-        						</div>
-        					</div>
-        					<div class="slide-over bg-white padding10">
-            					Modifier un devis
-        					</div>
-   						 </div>
-                    </div>
-                    
-                    <div class="tile fg-black">
-                    	<div class="tile-content slide-up">
-        					<div class="slide">
-        						<div class="image-containeer image-format-fill" style="width; 100%; height: 100%">
-        							<div class="frame">
-        								<%= image_tag("dossier.png", :alt => "dossier") %>
-        							</div>
-        						</div>
-        					</div>
-        					<div class="slide-over bg-white padding10">
-            					Projet en cours
-        					</div>
-   						 </div>
-                    </div>
-                    
-                    <div class="tile-small fg-black">
-                    	<div class="tile-content slide-up">
-        					<div class="slide">
-        						<div class="image-containeer image-format-fill" style="width; 100%; height: 100%">
-        							<div class="frame">
-        								<%= image_tag("param.png", :alt => "param") %>
-        							</div>
-        						</div>
-        					</div>
-        					<div class="slide-over bg-white padding10">
-            					Modifier d'information
-        					</div>
-   						 </div>
-                    </div>
-                    
-                    <div class="tile-small fg-black">
-                    	<div class="tile-content slide-up">
-        					<div class="slide">
-        						<div class="image-containeer image-format-fill" style="width; 100%; height: 100%">
-        							<div class="frame">
-        								<%= image_tag("log_off.png", :alt => "logoff") %>
-        							</div>
-        						</div>
-        					</div>
-        					<div class="slide-over bg-white padding10">
-            					Déconnection
-   						 	</div>
-   						 </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="tile-group double">
-            	<span class="tile-group-title">Images</span>
-            	<div class="tile-container">
-                	<h1>Existant</h1>
-                	<div class="tile-wide" data-role="tile"></div>
-                	
-                </div>
-</div>
-<% end %>
+
+	<div class="tile-area tile-area-scheme-dark fg-white" style="height: 100%; max-height: 100% !important;">
+		<h1 class="tile-area-title">Menu</h1>
+		<div class="tile-area-controls">
+			<button class="image-button icon-right bg-transparent fg-white bg-hover-dark no-border"><span class="sub-header no-margin text-light"><%= current_user.firstname %> <%= current_user.lastname %></span> <span class="icon mif-user"></span></button>
+			<%= button_to '', destroy_user_session_path, method: :delete , form_class: "square-button bg-transparent fg-white bg-hover-dark no-border" %>
+			<button class="square-button bg-transparent fg-white bg-hover-dark no-border" onclick="showCharms('#charmSettings')"><span class="mif-cog"></span></button>
+		</div>
+
+		<div class="tile-group double">
+			<span class="tile-group-title">Mes outils</span>
+
+			<div class="tile-container">
+
+				<a href="http://calendar.google.com" class="tile bg-indigo fg-white" data-role="tile">
+					<div class="tile-content iconic">
+						<span class="icon mif-calendar"></span>
+					</div>
+					<span class="tile-label">Calendrier</span>
+				</a>
+
+				<div class="tile bg-darkBlue fg-white" data-role="tile" onclick="document.location.href='https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1#identifier'">
+					<div class="tile-content iconic">
+						<span class="icon mif-envelop"></span>
+					</div>
+					<span class="tile-label">Messagerie</span>
+				</div>
+
+				<div class="tile-large bg-steel fg-white" data-role="tile" data-on-click="document.location.href='http://www.foreca.com'">
+					<div class="tile-content" id="weather_bg" style="background: top left no-repeat; background-size: cover">
+						<div class="padding10">
+							<h1 id="weather_icon" style="font-size: 6em;position: absolute; top: 10px; right: 10px;"></h1>
+							<h1 id="city_temp"></h1>
+							<h2 id="city_name" class="text-light"></h2>
+							<h4 id="city_weather"></h4>
+              				<br>
+							<p class="no-margin text-shadow">Pression: <span class="text-bold" id="pressure"></span> hPa</p>
+							<p class="no-margin text-shadow">Vent: <span class="text-bold" id="wind_speed">0</span> m/s</p>
+						</div>
+					</div>
+					<span class="tile-label">Méteo</span>
+				</div>
+			</div>
+		</div>
+	</div>
+</html>
