--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,127 @@
-<h1>Liste des clients</h1>
 
+<div class="app-bar fixed-top darcula" data-role="appbar">
+        <a class="app-bar-element branding">Gestion Clients</a>
+        <span class="app-bar-divider"></span>
+        <ul class="app-bar-menu">
+            <li data-flexorderorigin="1" data-flexorder="2">
+                <a href="" class="dropdown-toggle">Client</a>
+                <ul class="d-menu" data-role="dropdown">
+                    <li><a href="">Nouveau</a></li>
+                    <li class="divider"></li>
+                    <li><a href="">Modifier</a></li>
+                    <li class="divider"></li>
+                    <li><a href="">Consulter</a></li>
+                </ul>
+            </li>
+            <li data-flexorderorigin="4" data-flexorder="5">
+                <a href="" class="dropdown-toggle">Help</a>
+                <ul class="d-menu" data-role="dropdown">
+                    <li><a href="">ChatOn</a></li>
+                    <li><a href="">Community support</a></li>
+                    <li class="divider"></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </li>
+        </ul>
+
+        <div class="app-bar-element place-right">
+            <span class="dropdown-toggle"><span class="mif-cog"></span> User Name</span>
+            <div class="app-bar-drop-container padding10 place-right no-margin-top block-shadow fg-dark" data-role="dropdown" data-no-close="true" style="width: 220px">
+                <h2 class="text-light">Quick settings</h2>
+                <ul class="unstyled-list fg-dark">
+                    <li><a href="" class="fg-white1 fg-hover-yellow">Profile</a></li>
+                    <li><a href="" class="fg-white2 fg-hover-yellow">Security</a></li>
+                    <li><a href="" class="fg-white3 fg-hover-yellow">Exit</a></li>
+                </ul>
+            </div>
+        </div>
+    <div class="app-bar-pullbutton automatic" style="display: none;"></div>
+    <div class="clearfix" style="width: 0;"></div>
+    <nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;">
+        <ul class="app-bar-pullmenubar hidden app-bar-menu"></ul>
+    </nav>
+</div>
+<br>
+<br>
+<div class="cell auto-size padding20 bg-white" id="cell-content">
+                    <h1 class="text-light">Liste Client<span class="mif-users place-right"></span></h1>
+                    <hr class="thin bg-grayLighter">
+                    <button class="button primary" onclick="pushMessage('info')"><span class="mif-plus"></span> Creer...</button>
+                    <button class="button success" onclick="pushMessage('success')"><span class="mif-database"></span> Modifier</button>
+                    <hr class="thin bg-grayLighter">
+                    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">
+                        <div class="dataTables_length" id="DataTables_Table_0_length">
+                            <label>Show 
+                                <select name="DataTables_Table_0_length" aria-controls="DataTables_Table_0" class="">
+                                    <option value="10">10</option>
+                                    <option value="25">25</option>
+                                    <option value="50">50</option>
+                                    <option value="100">100</option>
+                                </select> entries
+                            </label>
+                        </div>
+                        <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                            <label>Search:<input type="search" class="" placeholder="" aria-controls="DataTables_Table_0"></label>
+                        </div>
+                        <table class="dataTable border bordered no-footer" data-role="datatable" data-auto-width="false" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
+                        <thead>
+                            <tr role="row">
+                                <td style="width: 20px" class="sorting_asc" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-sort="ascending" aria-label=" : activate to sort column descending"></td>
+                                <td class="sortable-column sort-asc sorting" style="width: 100px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="ID: activate to sort column ascending">ID</td>
+                                <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Machine name: activate to sort column ascending">Machine name</td>
+                                <td class="sortable-column sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Address: activate to sort column ascending">Address</td>
+                                <td class="sortable-column sorting" style="width: 20px" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">Status</td>
+                                <td style="width: 20px" class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Switch: activate to sort column ascending">Switch</td></tr>
+                        </thead>
+                        <tbody>
+                            <tr role="row" class="odd">
+                                <td class="sorting_1">
+                                    <label class="input-control checkbox small-check no-margin">
+                                        <input type="checkbox">
+                                        <span class="check"></span>
+                                    </label>
+                                </td>
+                                <td>123890723212</td>
+                                <td>Machine number 1</td>
+                                <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
+                                <td class="align-center"><span class="mif-checkmark fg-green"></span></td>
+                                <td>
+                                    <label class="switch-original">
+                                    <input type="checkbox" checked="">
+                                        <span class="check"></span>
+                                    </label>
+                                </td>
+                            </tr>
+                            <tr role="row" class="even">
+                                <td class="sorting_1">
+                                    <label class="input-control checkbox small-check no-margin">
+                                        <input type="checkbox">
+                                        <span class="check"></span>
+                                    </label>
+                                </td>
+                                <td>123890723212</td>
+                                <td>Machine number 2</td>
+                                <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
+                                <td class="align-center"><span class="mif-stop fg-red"></span></td>
+                                <td>
+                                    <label class="switch-original">
+                                        <input type="checkbox">
+                                        <span class="check"></span>
+                                    </label>
+                                </td>
+                            </tr>
+                        </tbody>
+                        </table>
+                    <div class="dataTables_info" id="DataTables_Table_0_info" role="status" aria-live="polite">Showing 1 to 2 of 2 entries</div>
+                    <div class="dataTables_paginate paging_simple_numbers" id="DataTables_Table_0_paginate">
+                        <a class="paginate_button previous disabled" aria-controls="DataTables_Table_0" data-dt-idx="0" tabindex="0" id="DataTables_Table_0_previous">Previous</a>
+                        <span><a class="paginate_button current" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0">1</a></span>
+                        <a class="paginate_button next disabled" aria-controls="DataTables_Table_0" data-dt-idx="2" tabindex="0" id="DataTables_Table_0_next">Next</a>
+                    </div>
+                </div>
+            </div> 
+    
+    
 <table class="table table-hover">
     <thead>
         <tr>
